# mcps

./: .pre-commit-config.yaml  CHANGELOG.md  CONTEXT.md  Cargo.toml  README.md  rust-toolchain.toml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  cloud-kms-live.yml  codeql.yml  live-infra-e2e.yml
docs/: MCP-S-IN-ONE-PAGE.md  PROJECT_STATUS.md  UPSTREAM_PROPOSAL_PROCESS.md  demo-minimal-fileserver.md  dogfood-runbook.md  quickstart-gcp-kms.md  quickstart-local.md
docs/adr/: README.md  adr-mcps-008.md  adr-mcps-010.md  adr-mcps-013.md  adr-mcps-020.md  adr-mcps-021.md  adr-mcps-022.md  adr-mcps-023.md  adr-mcps-024.md  adr-mcps-025.md  adr-mcps-026.md  adr-mcps-027.md  adr-mcps-028.md  adr-mcps-029.md  adr-mcps-030.md  adr-mcps-031.md  adr-mcps-032.md  adr-mcps-033.md  adr-mcps-034.md  adr-mcps-035.md  adr-mcps-036.md  adr-mcps-037.md  adr-mcps-038.md  adr-mcps-039.md  adr-mcps-040.md  adr-mcps-041.md  adr-mcps-042.md  adr-mcps-043.md  adr-mcps-044.md  adr-mcps-045.md  adr-mcps-047.md
docs/grilling-seed/: mcps-client-integration-grill-input.md  mcps-discovery-enforcement-grill-input.md  mcps-v0.6-grill-decisions.md  mcps-v0.6-grill-transcript.md  (+1 more)
mcps-client-core/: BUILD.bazel  Cargo.toml
mcps-client-core/src/: audit.rs  correlation.rs  discovery.rs  enforcement.rs  lib.rs  probe.rs  request.rs  response.rs  signer.rs
mcps-client-core/tests/: continuation_roundtrip_test.rs  discovery_test.rs  enforcement_accept_test.rs  response_roundtrip_test.rs  signed_request_vectors_test.rs  signer_custody_test.rs
mcps-client-proxy/: BUILD.bazel  Cargo.toml
mcps-client-proxy-cli/: Cargo.toml
mcps-client-proxy-cli/src/: kms_signer.rs  main.rs
mcps-client-proxy/src/: proxy.rs
mcps-client-proxy/tests/: continuation_driving_test.rs  e2e_topology_test.rs
mcps-conformance/: BUILD.bazel  Cargo.toml  conformance_manifest.json  security_traceability_manifest.json
mcps-conformance/src/: target.rs
mcps-conformance/tests/: echo_server_test.rs
mcps-core/: BUILD.bazel  Cargo.toml
mcps-core/src/: audit.rs  constraints.rs  envelope.rs  error.rs  ids.rs  lib.rs  mrt.rs  pipeline.rs  replay.rs  signing.rs  unwrap.rs
mcps-core/tests/: draft02_vectors_test.rs  multi_round_trip_test.rs  vectors_test.rs
mcps-core/tests/vectors/: expired_request.json  replay_request.json  tampered_id.json  unknown_envelope_field.json  v1_valid_request.json  v2_tampered_argument.json  v3_valid_response.json  v4_wrong_hash_garbage_sig_response.json  v4b_signed_wrong_hash_response.json  wrong_audience_request.json
mcps-core/tests/vectors/draft-02/: d12_valid_continuation_request.json  d13_continuation_type_unsupported.json  d14_continuation_malformed.json  d15_signed_input_required_response.json  manifest.json
mcps-demo/: BUILD.bazel  Cargo.toml
mcps-demo-fileserver/: BUILD.bazel  Cargo.toml
mcps-demo-fileserver/src/: error.rs  lib.rs  main.rs  server.rs
mcps-demo-fileserver/tests/: server_test.rs
mcps-demo-server/: Cargo.toml
mcps-demo/src/: demo_authorization.rs  demo_paths.rs  e2e_flow.rs  e2e_persistent_flow.rs  lib.rs  mtls_client.rs
mcps-demo/tests/: demo_client_test.rs  demo_negative_e2e_test.rs  demo_negative_test.rs  demo_positive_test.rs  demo_proxy_test.rs  demo_scope_test.rs
mcps-host/: Cargo.toml
mcps-host/src/: clock.rs  lib.rs  nonce.rs  session.rs  verified_result.rs
mcps-host/tests/: host_session_test.rs  host_test.rs
mcps-policy/: Cargo.toml
mcps-policy/conformance/: gen_vectors.rs
mcps-policy/src/: block.rs  error.rs  evaluator.rs  lib.rs  manifest.rs  profile.rs  reference.rs
mcps-policy/tests/vectors/: phase5_vectors.json
mcps-proxy/: BUILD.bazel  Cargo.toml
mcps-proxy/src/: authorized_keyset.rs  aws_kms_keysource.rs  aws_sigv4.rs  cli.rs  delegated_response_signer.rs  delegated_tls.rs  durable_replay.rs  etcd_store.rs  gcp_kms_keysource.rs  inner_launch.rs  key_source.rs  kms_keysource.rs  lib.rs  main.rs  ocsp.rs  pkcs11_keysource.rs  proxy.rs  redis_store.rs  replay_tier.rs  sandbox_linux.rs  shared_replay.rs  tls.rs  transport.rs  trust_cache.rs
mcps-proxy/tests/: aws_kms_live_test.rs  cpstore_etcd_e2e_test.rs  dev_env_key_source_test.rs  full_stack_test.rs  gcp_kms_delegated_tls_live_test.rs  gcp_kms_draft02_live_test.rs  gcp_kms_live_test.rs  keyset_admission_test.rs  proxy_lb_assertion_test.rs  proxy_policy_test.rs  proxy_test.rs  proxy_transport_test.rs  proxy_version_policy_test.rs  sandbox_linux_e2e_test.rs  tls_test.rs
mcps-test-paths/: Cargo.toml
mcps-test-paths/src/: lib.rs
mcps-transport/: Cargo.toml
mcps-walkthrough/: BUILD.bazel  Cargo.toml  README.md
mcps-walkthrough/src/: lib.rs
mcps-walkthrough/tests/: no_tracked_secrets.rs  sdk_driver_matrix.rs  t0_hello_signed_call.rs  t1_real_tools_fail_closed.rs  t3_external_users_transport_binding.rs  t4_enterprise_kms_custody.rs
scripts/: demo-gcp-kms.sh  demo-local.sh  test-demos.sh  test-gcp-cloud.sh.example
sdk/python/: .gitignore  Cargo.toml  README.md  pyproject.toml
sdk/python/examples/: gen_correlation_vectors.rs  gen_response_vector.rs  gen_vector.rs
sdk/python/python/mcps_sdk/: __init__.py  client.py  driver.py  http_transport.py  streamable.py  transport.py
sdk/python/src/: lib.rs
sdk/python/tests/: test_continuation.py  test_continuation_transport.py  test_correlation.py  test_custody.py  test_e2e_mtls_session.py  test_parity_stdio.py  test_streamable.py  test_transport.py
sdk/python/tests/fixtures/: correlation_wire_codes.json  sign_request_vector.json  verify_response_vectors.json
sdk/typescript/: .gitignore  Cargo.toml  README.md  build.rs  package-lock.json  package.json  tsconfig.json  vitest.config.ts
sdk/typescript/native/: binding.d.ts  binding.js
sdk/typescript/src/: authorization.ts  client.ts  driver.ts  httpTransport.ts  index.ts  lib.rs  streamable.ts  transport.ts
sdk/typescript/test/: authorization.test.ts  continuation.test.ts  continuationTransport.test.ts  correlation.test.ts  custody.test.ts  fixtures.ts  helpers.ts  liveMtlsSession.test.ts  parity.test.ts  response.test.ts  streamable.test.ts  transport.test.ts
(+12 files in other folders)
