load("//bazel:defs.bzl", "nt_rust_library", "nt_rust_test")

package(default_visibility = ["//visibility:public"])

# MCPS-40 (ADR-MCPS-044 §mcps-client-core): the client-side shared seam consumed
# by the local proxy and the SDK. Pure library — depends only on the verification
# crate plus serde_json (request construction). No networking/async/fs: those are
# the mode-specific layers ABOVE this seam.
nt_rust_library(
    name = "mcps_client_core",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "mcps_client_core",
    edition = "2021",
    deps = [
        "//mcps-core:mcps_core",
        "@crates_mcps//:serde_json",
    ],
)

# An ordinary MCP request signed by the client core verifies against the
# server-side mcps-core draft-02 verifier; the client request_hash equals the
# verifier's response-binding handle (the MCPS-40 cross-side oracle).
nt_rust_test(
    name = "signed_request_vectors_test",
    srcs = ["tests/signed_request_vectors_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    edition = "2021",
    deps = [
        ":mcps_client_core",
        "//mcps-core:mcps_core",
        "@crates_mcps//:serde_json",
    ],
)

# MCPS-41: full client round-trip — sign a request, the server signs the bound
# response, the client verifies it back over the public API.
nt_rust_test(
    name = "response_roundtrip_test",
    srcs = ["tests/response_roundtrip_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    edition = "2021",
    deps = [
        ":mcps_client_core",
        "//mcps-core:mcps_core",
        "@crates_mcps//:serde_json",
    ],
)

# MCPS-42: the enforcement engine accepts a genuinely-verified exchange in both
# normative modes (the AcceptMcps path needs a real VerifiedResponse).
nt_rust_test(
    name = "enforcement_accept_test",
    srcs = ["tests/enforcement_accept_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    edition = "2021",
    deps = [
        ":mcps_client_core",
        "//mcps-core:mcps_core",
        "@crates_mcps//:serde_json",
    ],
)

# MCPS-45: a provider's authorization binding is signed verbatim into the preimage
# and recovered unchanged by the server-side verifier (bind-not-interpret).
nt_rust_test(
    name = "authz_binding_preimage_test",
    srcs = ["tests/authz_binding_preimage_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    edition = "2021",
    deps = [
        ":mcps_client_core",
        "//mcps-core:mcps_core",
        "@crates_mcps//:serde_json",
    ],
)

# MCPS-46: a request built through the ClientSigner custody seam (with the policy
# gate) verifies server-side and the evidence names the actual signer.
nt_rust_test(
    name = "signer_custody_test",
    srcs = ["tests/signer_custody_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    edition = "2021",
    deps = [
        ":mcps_client_core",
        "//mcps-core:mcps_core",
        "@crates_mcps//:serde_json",
    ],
)
