[package]
name = "mcps-client-core"
version = "0.8.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "MCP-S client-side core — the shared seam (consumed by the client proxy and SDK) that constructs signed draft-02 requests and binds responses. Pure: no networking/async/fs."

[dependencies]
# MCPS-40 (ADR-MCPS-044 §mcps-client-core seam): the client core is the shared
# evidence-construction / verification seam below the proxy and SDK. It reuses
# mcps-core's pure primitives (JCS canonicalization, request_hash, Ed25519) and
# the frozen draft-02 envelope/error vocabulary; it MUST NOT pull in any
# networking/async/fs crate (those are the mode-specific layers above this seam).
mcps-core = { path = "../mcps-core" }
serde_json = { workspace = true }

[features]
# MCPS-53 (#200): the non-normative opportunistic support PROBE is dev/test only.
# It is compiled ONLY under cfg(test) or this explicit, non-default feature, so a
# default (production) build does not link it — an enforced boundary, not just a
# doc note. The probe can never affect a trust decision regardless.
default = []
dev-probe = []

[lib]
name = "mcps_client_core"
path = "src/lib.rs"
