load("//bazel:defs.bzl", "nt_rust_library", "nt_rust_test")

package(default_visibility = ["//visibility:public"])

# MCPS-49 (ADR-MCPS-044 §Proxy transparency / §Security adapter scope): the local
# client-side MCP-S proxy — the first adoption bridge. Mode-specific layer above the
# pure mcps-client-core seam; the transport is abstracted behind a trait so the
# security pipeline links no networking crate here.
nt_rust_library(
    name = "mcps_client_proxy",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "mcps_client_proxy",
    edition = "2021",
    deps = [
        "//mcps-client-core:mcps_client_core",
        "//mcps-core:mcps_core",
        "@crates_mcps//:serde_json",
    ],
)

# The proxy signs a plain-MCP request, forwards to an in-process MCP-S remote,
# verifies the signed response, and returns plain MCP: signed round-trip, legacy
# route under explicit policy, strict-mode fail-closed, and transparency.
nt_rust_test(
    name = "proxy_roundtrip_test",
    srcs = ["tests/proxy_roundtrip_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    edition = "2021",
    deps = [
        ":mcps_client_proxy",
        "//mcps-client-core:mcps_client_core",
        "//mcps-core:mcps_core",
        "@crates_mcps//:serde_json",
    ],
)

# MCPS-51: four-hop end-to-end topology (ordinary client -> proxy -> remote MCP-S
# -> ordinary server) running the ADR-044 §10 conformance suite over real wiring.
nt_rust_test(
    name = "e2e_topology_test",
    srcs = ["tests/e2e_topology_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    edition = "2021",
    deps = [
        ":mcps_client_proxy",
        "//mcps-client-core:mcps_client_core",
        "//mcps-core:mcps_core",
        "@crates_mcps//:serde_json",
    ],
)
