[package]
name = "mcps-client-proxy"
version = "0.8.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Local client-side MCP-S proxy (first adoption bridge): plain-MCP endpoint -> sign via mcps-client-core -> forward -> verify signed response -> plain MCP. A security adapter, not an orchestrator."

[dependencies]
# MCPS-49 (ADR-MCPS-044 §Proxy transparency / §Security adapter scope): the
# client proxy is the MODE-SPECIFIC layer above the pure mcps-client-core seam.
# It owns the listener/route registry/transport adapter and wires the client-core
# pieces; the transport is abstracted behind a trait so the library stays testable.
mcps-client-core = { path = "../mcps-client-core" }
mcps-core = { path = "../mcps-core" }
serde_json = { workspace = true }

[lib]
name = "mcps_client_proxy"
path = "src/lib.rs"
